@@ -5,6 +5,7 @@ export(cleanConda)
 export(clearExternalDir)
 export(clearObsoleteDir)
 export(deactivateEnvironment)
+export(defaultMiniforgeVersion)
 export(destroyOldVersions)
 export(dir.create2)
 export(getCondaBinary)
